--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html ><head><meta img=src-"Ice Cream Link" alt="Picture of Ice Cream"/>
+<body>
+        <h1>Most Popular Ice Cream Flavors</h1>
+        <table><tr><th>Rank</th><th>Flavor</th></tr>
+        <tr><td>1</td><td>Vanilla</td></tr>
+        <tr><td>2</td><td>Strawberry</td></tr>
+        <tr><td>3</td><td>Chocolate</td></tr>
+        <tr><td>4</td><td>Cookies and Cream</td></tr>
+        <tr><td>5</td><td>Mint Chocolate Chip</td></tr></table>
+</body>
+</html>
 
