--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<head> <link href=”style.css” rel=”stylesheet” type=”text/css” /> 
+</head>
 <html ><head><meta img=src-"Ice Cream Link" alt="Picture of Ice Cream"/>
 <body>
         <h1>Most Popular Ice Cream Flavors</h1>
