--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
+
 <!DOCTYPE html>
-<head> <link href=”style.css” rel=”stylesheet” type=”text/css” /> 
-</head>
-<html ><head><meta img=src-"Ice Cream Link" alt="Picture of Ice Cream"/>
+<html ><head><meta charset=utf-8" /><title>I Screm For Ice Cream!</title></head> 
 <body>
         <h1>Most Popular Ice Cream Flavors</h1>
         <table><tr><th>Rank</th><th>Flavor</th></tr>
@@ -12,4 +11,11 @@
         <tr><td>5</td><td>Mint Chocolate Chip</td></tr></table>
 </body>
 </html>
+<head>
+<Link href="style.css" rel="stylesheet" type+"text/css" /> 
+        
+<style>
+td {color:#FF0000;}
+</style> 
 
+        </head> 
