--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
      
          </head> 
 <body>
+ <img src:"https://food.fnr.sndimg.com/content/dam/images/food/fullset/2018/4/30/0/FNK_Ice-Cream-in-a-Bag_s4x3.jpg.rend.hgtvcom.616.462.suffix/1525105614384.jpeg" />
         <h1>Most Popular Ice Cream Flavors</h1>
         <table><tr><th>Rank</th><th>Flavor</th></tr>
         <tr><td>1</td><td>Vanilla</td></tr>
