--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      
          </head> 
 <body>
+       <img src="https://www.seriouseats.com/2018/06/20180625-no-churn-vanilla-ice-cream-vicky-wasik-13-1500x1125.jpg" />
         <h1>Most Popular Ice Cream Flavors</h1>
         <table><tr><th>Rank</th><th>Flavor</th></tr>
         <tr><td>1</td><td>Vanilla</td></tr>
@@ -19,7 +20,6 @@
 </html>
 <head>
 <Link href="style.css" rel="stylesheet" type+"text/css" /> 
-<img src:"https://www.seriouseats.com/2018/06/20180625-no-churn-vanilla-ice-cream-vicky-wasik-13-1500x1125.jpg" />
 <style>
 td {color:#FF0000;}
 </style> 
