--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      
          </head> 
 <body>
-       <img src="https://www.seriouseats.com/2018/06/20180625-no-churn-vanilla-ice-cream-vicky-wasik-13-1500x1125.jpg" />
+       <img src="https://www.seriouseats.com/2018/06/20180625-no-churn-vanilla-ice-cream-vicky-wasik-13-1500x1125.jpg" height="250" width="250" class="IceCream" >
         <h1>Most Popular Ice Cream Flavors</h1>
         <table><tr><th>Rank</th><th>Flavor</th></tr>
         <tr><td>1</td><td>Vanilla</td></tr>
