--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html >
    <head>
       <meta charset=utf-8" />
-      <title>I Scream For Ice Cream!</title>
+      <title>Top 5 things to do</title>
      
      
          </head> 
@@ -25,7 +25,7 @@
 <head>
 <Link href="style.css" rel="stylesheet" type+"text/css" /> 
 <style>
-td {color:#FF0000;}
+td {color:purple;}
 </style> 
 
         </head> 
